# freemodbus

./: .gitignore  Makefile.in  configure  configure.ac
demo/: Makefile.am  Makefile.in
demo/LINUX/: Makefile.am  Makefile.in  demo.c  portserial.c
demo/LINUXMASTER/: Makefile  Makefile.am  Makefile.in  demo_master.c  portevent.c  portother.c  portserial.c  porttimer.c
demo/LINUXMASTER/.deps/: demo_master.Po  portevent.Po  portother.Po  portserial.Po  porttimer.Po
src/: Makefile.am  Makefile.in  mbascii.c  mbascii.h  mbconfig.h  mbframe.h  mbmaster.c  mbmaster.h  mbmasterfunc.h  mbmasterfunccoils.c  mbmasterfuncdisc.c  mbmasterfuncholding.c  mbmasterfuncinput.c  mbmasterfuncother.c  mbrtu.c  mbtcp.c
