AM_CPPFLAGS = -I${top_src}/src -I../demo/LINUX
lib_LIBRARIES = libfreemodbus.a
libfreemodbus_a_SOURCES = \
													mbutils.c \
													mbascii.c \
													mbcrc.c \
													mbrtu.c \
													mbtcp.c \
													mbfunccoils.c \
													mbfuncdiag.c \
													mbfuncdisc.c \
													mbfuncholding.c \
													mbfuncinput.c \
													mbfuncother.c \
													mb.c

