AM_CPPFLAGS = -I${top_srcdir}/src -I${top_srcdir}/demo/LINUX
lib_LIBRARIES = libfreemodbus.a libfreemodbus_m.a

libfreemodbus_m_a_SOURCES = \
	mbutils.c \
	mbascii.c \
	mbcrc.c \
	mbrtu.c \
	mbtcp.c \
	mbfuncdiag.c \
	mbmasterfunccoils.c \
	mbmasterfuncdisc.c \
	mbmasterfuncholding.c \
	mbmasterfuncinput.c \
	mbmasterfuncother.c \
	mbmaster.c

libfreemodbus_a_SOURCES = \
	mbutils.c \
	mbascii.c \
	mbcrc.c \
	mbrtu.c \
	mbtcp.c \
	mbfunccoils.c \
	mbfuncdiag.c \
	mbfuncdisc.c \
	mbfuncholding.c \
	mbfuncinput.c \
	mbfuncother.c \
	mb.c

